--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "16.2.0",
     "react-native": "0.52.0",
     "react-native-modal-datetime-picker": "^4.13.0",
-    "react-native-pull-to-refresh": "^2.1.3"
+    "react-native-pull-to-refresh": "^2.1.3",
+    "react-native-radio-button": "^2.0.1"
   },
   "devDependencies": {
     "babel-jest": "22.0.4",
