--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "16.2.0",
     "react-native": "0.52.0",
     "react-native-modal-datetime-picker": "^4.13.0",
+    "react-native-open-maps": "^0.1.1",
     "react-native-pull-to-refresh": "^2.1.3",
     "react-native-radio-button": "^2.0.1"
   },
